# OpenbindDatabaseTemplate

./: README.md  config.yaml  pyproject.toml
scripts/: collate.py
src/xchem_database/: collate_pandda_2_event_data.py  constants.py  event_data_dep.py  get_annotation_sample_from_dataset_dir.py  get_atom_ids.py  get_closest_hit.py  get_closest_res_from_dataset_dir.py  get_connectivity.py  get_fragment_mol_from_dataset_cif_path.py  get_lig_block_from_path.py  get_ligand_data_sample_from_dataset_dir.py  get_matched_cifs_from_dir.py  get_most_recent_modelled_structure_from_dataset_dir.py  get_pose_sample_from_dataset_dir.py  get_smiles.py  get_st_hits.py  get_structure_from_path.py  get_system_from_dtag.py  get_xmap_sample_from_dataset_dir.py  get_z_map_metadata_sample_from_dataset_dir.py  get_z_map_sample_from_dataset_dir.py  load_xmap_from_mtz_path.py  load_xmap_from_path.py  match_atoms.py  res_to_array.py  sample_xmap.py  tables.py
