[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xchem_database"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.14",
]
description = "A repository to capture XChem database info"
dependencies = [
    'pandas',
    'pyyaml', 
    'gemmi',
    'rich',
    'rdkit',
    'fire',
    'numpy'
] 
dynamic = ["version"]
license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
addopts = "-x"
testpaths = ['tests']

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]